[gd_scene load_steps=13 format=2]

[ext_resource path="res://LevelBuilding/Interaction/InteractionArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://LevelBuilding/Vents/VentEntrance.gd" type="Script" id=2]
[ext_resource path="res://Materials/Vent/VentIterior.tres" type="Material" id=3]
[ext_resource path="res://Meshes/Architecture/Vents/VentCover.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Materials/Vent/VentCover.tres" type="Material" id=5]

[sub_resource type="SphereShape" id=1]
radius = 2.0

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 0.03, 0.5 )

[sub_resource type="SpatialMaterial" id=6]
resource_name = "Vent"
albedo_color = Color( 0.8, 0.8, 0.8, 1 )
metallic = 0.5

[sub_resource type="ArrayMesh" id=7]
surfaces/0 = {
"aabb": AABB( -1.2, -0.1, -1.2, 1.2, 1.3, 1.2 ),
"array_data": PoolByteArray( 154, 153, 153, 191, 0, 0, 0, 0, 154, 153, 153, 191, 127, 0, 0, 0, 0, 0, 127, 129, 0, 0, 0, 60, 154, 153, 153, 191, 0, 0, 0, 0, 0, 0, 0, 0, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 0, 60, 154, 153, 153, 191, 154, 153, 153, 63, 154, 153, 153, 191, 127, 0, 0, 0, 0, 0, 127, 129, 0, 0, 0, 0, 154, 153, 153, 191, 154, 153, 153, 63, 0, 0, 0, 0, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 129, 0, 0, 0, 0, 129, 0, 129, 0, 60, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 154, 153, 153, 191, 129, 0, 0, 0, 0, 129, 0, 129, 0, 60, 0, 0, 0, 0, 0, 0, 154, 153, 153, 63, 0, 0, 0, 0, 129, 0, 0, 0, 0, 129, 0, 129, 0, 0, 0, 60, 0, 0, 0, 0, 154, 153, 153, 63, 154, 153, 153, 191, 129, 0, 0, 0, 0, 129, 0, 129, 0, 0, 0, 0, 205, 204, 140, 191, 0, 0, 0, 0, 205, 204, 140, 191, 0, 0, 127, 0, 0, 129, 0, 127, 204, 52, 0, 60, 205, 204, 204, 189, 0, 0, 0, 0, 205, 204, 140, 191, 0, 0, 127, 0, 0, 129, 0, 127, 204, 52, 0, 0, 205, 204, 140, 191, 205, 204, 204, 189, 205, 204, 140, 191, 0, 0, 127, 0, 0, 129, 0, 127, 102, 54, 0, 60, 205, 204, 204, 189, 205, 204, 204, 189, 205, 204, 140, 191, 0, 0, 127, 0, 0, 129, 0, 127, 102, 54, 0, 0, 0, 0, 0, 0, 154, 153, 153, 63, 0, 0, 0, 0, 0, 129, 0, 0, 129, 0, 0, 129, 0, 0, 0, 0, 0, 0, 0, 0, 154, 153, 153, 63, 154, 153, 153, 191, 0, 129, 0, 0, 129, 0, 0, 129, 0, 0, 0, 60, 154, 153, 153, 191, 154, 153, 153, 63, 0, 0, 0, 0, 0, 129, 0, 0, 129, 0, 0, 129, 0, 60, 0, 0, 154, 153, 153, 191, 154, 153, 153, 63, 154, 153, 153, 191, 0, 129, 0, 0, 129, 0, 0, 129, 0, 60, 0, 60, 205, 204, 140, 191, 0, 0, 0, 0, 205, 204, 140, 191, 0, 127, 0, 0, 129, 0, 0, 129, 85, 59, 85, 45, 205, 204, 140, 191, 0, 0, 0, 0, 205, 204, 204, 189, 0, 127, 0, 0, 129, 0, 0, 129, 85, 59, 85, 59, 154, 153, 153, 191, 0, 0, 0, 0, 154, 153, 153, 191, 0, 127, 0, 0, 129, 0, 0, 129, 0, 60, 0, 0, 154, 153, 153, 191, 0, 0, 0, 0, 0, 0, 0, 0, 0, 127, 0, 0, 130, 0, 0, 129, 0, 60, 0, 60, 205, 204, 204, 189, 0, 0, 0, 0, 205, 204, 140, 191, 0, 127, 0, 0, 129, 0, 0, 129, 85, 45, 85, 45, 0, 0, 0, 0, 0, 0, 0, 0, 154, 153, 153, 191, 0, 127, 0, 0, 129, 0, 0, 129, 0, 0, 0, 0, 205, 204, 204, 189, 0, 0, 0, 0, 205, 204, 204, 189, 0, 127, 0, 0, 129, 0, 0, 129, 85, 45, 85, 59, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 127, 0, 0, 129, 0, 0, 129, 0, 0, 0, 60, 205, 204, 204, 189, 0, 0, 0, 0, 205, 204, 140, 191, 129, 0, 0, 0, 0, 129, 0, 127, 0, 0, 0, 60, 205, 204, 204, 189, 0, 0, 0, 0, 205, 204, 204, 189, 129, 0, 0, 0, 0, 129, 0, 127, 0, 0, 0, 0, 205, 204, 204, 189, 205, 204, 204, 189, 205, 204, 140, 191, 129, 0, 0, 0, 0, 129, 0, 127, 102, 46, 0, 60, 205, 204, 204, 189, 205, 204, 204, 189, 205, 204, 204, 189, 129, 0, 0, 0, 0, 129, 0, 127, 102, 46, 0, 0, 205, 204, 140, 191, 0, 0, 0, 0, 205, 204, 204, 189, 127, 0, 0, 0, 0, 129, 0, 127, 102, 46, 0, 60, 205, 204, 140, 191, 0, 0, 0, 0, 205, 204, 140, 191, 127, 0, 0, 0, 0, 129, 0, 127, 102, 46, 0, 0, 205, 204, 140, 191, 205, 204, 204, 189, 205, 204, 204, 189, 127, 0, 0, 0, 0, 129, 0, 127, 102, 50, 0, 60, 205, 204, 140, 191, 205, 204, 204, 189, 205, 204, 140, 191, 127, 0, 0, 0, 0, 129, 0, 127, 102, 50, 0, 0, 205, 204, 204, 189, 0, 0, 0, 0, 205, 204, 204, 189, 0, 0, 129, 0, 0, 129, 0, 127, 102, 50, 0, 60, 205, 204, 140, 191, 0, 0, 0, 0, 205, 204, 204, 189, 0, 0, 129, 0, 0, 129, 0, 127, 102, 50, 0, 0, 205, 204, 204, 189, 205, 204, 204, 189, 205, 204, 204, 189, 0, 0, 129, 0, 0, 129, 0, 127, 204, 52, 0, 60, 205, 204, 140, 191, 205, 204, 204, 189, 205, 204, 204, 189, 0, 0, 129, 0, 0, 129, 0, 127, 204, 52, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 1, 0, 3, 0, 4, 0, 5, 0, 6, 0, 6, 0, 5, 0, 7, 0, 8, 0, 9, 0, 10, 0, 10, 0, 9, 0, 11, 0, 12, 0, 13, 0, 14, 0, 14, 0, 13, 0, 15, 0, 16, 0, 17, 0, 18, 0, 18, 0, 17, 0, 19, 0, 20, 0, 16, 0, 21, 0, 21, 0, 16, 0, 18, 0, 22, 0, 20, 0, 23, 0, 23, 0, 20, 0, 21, 0, 17, 0, 22, 0, 19, 0, 19, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 26, 0, 25, 0, 27, 0, 28, 0, 29, 0, 30, 0, 30, 0, 29, 0, 31, 0, 32, 0, 33, 0, 34, 0, 34, 0, 33, 0, 35, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 66,
"material": SubResource( 6 ),
"name": "Vent",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 36
}

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -1.2, 0, -1.2, -1.2, 0, 0, -1.2, 1.2, -1.2, -1.2, 1.2, -1.2, -1.2, 0, 0, -1.2, 1.2, 0, 0, 0, 0, 0, 0, -1.2, 0, 1.2, 0, 0, 1.2, 0, 0, 0, -1.2, 0, 1.2, -1.2, -1.1, 0, -1.1, -0.1, 0, -1.1, -1.1, -0.1, -1.1, -1.1, -0.1, -1.1, -0.1, 0, -1.1, -0.1, -0.1, -1.1, 0, 1.2, 0, 0, 1.2, -1.2, -1.2, 1.2, 0, -1.2, 1.2, 0, 0, 1.2, -1.2, -1.2, 1.2, -1.2, -1.1, 0, -1.1, -1.1, 0, -0.1, -1.2, 0, -1.2, -1.2, 0, -1.2, -1.1, 0, -0.1, -1.2, 0, 0, -0.1, 0, -1.1, -1.1, 0, -1.1, 0, 0, -1.2, 0, 0, -1.2, -1.1, 0, -1.1, -1.2, 0, -1.2, -0.1, 0, -0.1, -0.1, 0, -1.1, 0, 0, 0, 0, 0, 0, -0.1, 0, -1.1, 0, 0, -1.2, -1.1, 0, -0.1, -0.1, 0, -0.1, -1.2, 0, 0, -1.2, 0, 0, -0.1, 0, -0.1, 0, 0, 0, -0.1, 0, -1.1, -0.1, 0, -0.1, -0.1, -0.1, -1.1, -0.1, -0.1, -1.1, -0.1, 0, -0.1, -0.1, -0.1, -0.1, -1.1, 0, -0.1, -1.1, 0, -1.1, -1.1, -0.1, -0.1, -1.1, -0.1, -0.1, -1.1, 0, -1.1, -1.1, -0.1, -1.1, -0.1, 0, -0.1, -1.1, 0, -0.1, -0.1, -0.1, -0.1, -0.1, -0.1, -0.1, -1.1, 0, -0.1, -1.1, -0.1, -0.1 )

[sub_resource type="Animation" id=4]
resource_name = "CoverAnim"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("VentCover:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -105, -0.25, 0, 0.25, 0, -75, -0.25, 0, 0.25, 0, -90, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("VentCover:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("VentCover:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 )
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("VentCover:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("VentCover:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("VentCover:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("VentCover:rotation_degrees:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("VentCover:rotation_degrees:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("VentCover:rotation_degrees:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="VentEntrance" type="Spatial"]
script = ExtResource( 2 )

[node name="ClimbUpInteraction" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0919945, 0 )
interactFunction = "climbIn"
collisionExtents = Vector3( 0.5, 0.02, 0.5 )
description = "Climb into vent"
node = null

[node name="ClimbOutInteraction" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0100154, 0 )
interactFunction = "climbOut"
collisionExtents = Vector3( 0.5, 0.02, 0.5 )
description = "Climb out"
node = null

[node name="ClimbPos" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.457794, 0 )

[node name="InPos" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.898, 0 )

[node name="PlayerDetectionArea" type="Area" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="PlayerDetectionArea"]
shape = SubResource( 1 )

[node name="Cover" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0313457, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cover"]
shape = SubResource( 2 )

[node name="VentOpening" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0, 0.6 )
material_override = ExtResource( 3 )
mesh = SubResource( 7 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="VentOpening"]

[node name="CollisionShape" type="CollisionShape" parent="VentOpening/StaticBody"]
shape = SubResource( 3 )

[node name="VentCover" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0.5 )
material_override = ExtResource( 5 )
mesh = ExtResource( 4 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CoverAnim = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_exited"]
